Changed car barcode type to Long from String Changed Location code type to Long from String Added hibernate.ddl.status-auto=update Fixed testFindByStatus_ShouldReturnCars()