@@ -2,6 +2,8 @@ package cs_393_TZS.car_rental_application;
 
 import cs_393_TZS.car_rental_application.model.Car;
 import cs_393_TZS.car_rental_application.model.CarStatus;
+import cs_393_TZS.car_rental_application.model.CarType;
+import cs_393_TZS.car_rental_application.model.Reservation;
 import cs_393_TZS.car_rental_application.repository.CarRepository;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -19,18 +21,26 @@ class CarRepositoryTest {
 
     @Test
     void testFindByStatus_ShouldReturnCars() {
-        // Arrange
-        Car car = new Car();
-        car.setStatus(CarStatus.AVAILABLE);
-        carRepository.save(car);
+        Long barcode = 1L;
+        String licensePlate = "A1B2C3";
+        int passengerCapacity = 4;
+        String brand = "Toyota";
+        String model = "Corolla";
+        double mileage = 123.2;
+        String transmissionType = "Manual";
+        double dailyPrice = 112.2;
+        CarType carType = CarType.STANDARD;
+        CarStatus carStatus = CarStatus.AVAILABLE;
+        Reservation reservation = new Reservation();
 
-        // Act
-        List<Car> cars = carRepository.findByStatus(CarStatus.AVAILABLE);
+        Car car = new Car(barcode, licensePlate, passengerCapacity, brand,
+                model, mileage, transmissionType, dailyPrice, carType, carStatus);
 
-        // Assert
-        assertFalse(cars.isEmpty());
-        assertEquals(1, cars.size());
-        assertEquals(CarStatus.AVAILABLE, cars.get(0).getStatus());
+        Car savedCar = carRepository.save(car);
+
+        List<Car> foundCar = carRepository.findByStatus(CarStatus.AVAILABLE);
+        assertEquals(savedCar.getStatus(), foundCar.getFirst().getStatus());
+
     }
 
     @Test
